[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/restaurant_view_title.png" type="Texture" id=1]
[ext_resource path="res://assets/images/steveharvey.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://themes/curry/curry.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/icons/beef_curry.png" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/chicken_curry.png" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/coffee.png" type="Texture" id=7]
[ext_resource path="res://assets/images/icons/lemonade.png" type="Texture" id=8]
[ext_resource path="res://assets/images/icons/pork_curry.png" type="Texture" id=9]
[ext_resource path="res://assets/images/icons/waste.png" type="Texture" id=10]
[ext_resource path="res://assets/images/icons/money.png" type="Texture" id=11]
[ext_resource path="res://scripts/guis/restaurant_view.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 47
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 3 )

[node name="RestaurantView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.831373, 0.639216, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
margin_right = 1326.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Background2" type="ColorRect" parent="Background/MarginContainer/HBoxContainer"]
margin_right = 1326.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
color = Color( 0.980392, 0.929412, 0.803922, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/Background2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer"]
margin_right = 1306.0
margin_bottom = 708.0
custom_constants/separation = 10

[node name="Meals" type="Panel" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer"]
margin_right = 257.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
columns = 2

[node name="ChknCurry" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
margin_right = 117.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ChknLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
unique_name_in_owner = true
margin_left = 121.0
margin_right = 237.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="PorkCurry" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
margin_top = 143.0
margin_right = 117.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="PorkLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
unique_name_in_owner = true
margin_left = 121.0
margin_top = 143.0
margin_right = 237.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="BeefCurry" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
margin_top = 286.0
margin_right = 117.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="BeefLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
unique_name_in_owner = true
margin_left = 121.0
margin_top = 286.0
margin_right = 237.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Lemonade" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
margin_top = 428.0
margin_right = 117.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="LemonadeLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
unique_name_in_owner = true
margin_left = 121.0
margin_top = 428.0
margin_right = 237.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Coffee" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
margin_top = 570.0
margin_right = 117.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="CoffeeLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Meals/GridContainer"]
unique_name_in_owner = true
margin_left = 121.0
margin_top = 570.0
margin_right = 237.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Stats" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 781.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Money" type="Panel" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats"]
margin_right = 514.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Money"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Money/HBoxContainer"]
margin_right = 94.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Money/HBoxContainer"]
margin_left = 114.0
margin_right = 494.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EarnedLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Money/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_right = 380.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.356863, 0.694118, 0.145098, 1 )
custom_fonts/font = SubResource( 2 )
text = "Earned: "
valign = 1

[node name="SpentLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Money/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_top = 107.0
margin_right = 380.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Spent:"
valign = 1

[node name="Customer" type="Panel" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats"]
margin_top = 239.0
margin_right = 514.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Customer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Customer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Customer/HBoxContainer"]
margin_left = 114.0
margin_right = 494.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SuccededLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Customer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_right = 380.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.356863, 0.694118, 0.145098, 1 )
custom_fonts/font = SubResource( 2 )
text = "Succeded:"
valign = 1

[node name="FailedLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Customer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_top = 107.0
margin_right = 380.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Spent:"
valign = 1

[node name="Waste" type="Panel" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats"]
margin_top = 478.0
margin_right = 514.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Waste"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Waste/HBoxContainer"]
margin_right = 94.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Waste/HBoxContainer"]
margin_left = 114.0
margin_right = 494.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EdibleLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Waste/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_right = 380.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Edible Waste
Produced:"
valign = 1

[node name="InedibleLabel" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Stats/Waste/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_top = 107.0
margin_right = 380.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Inedible Waste
Produced:"
valign = 1

[node name="Resto" type="Panel" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer"]
margin_left = 791.0
margin_right = 1306.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Resto"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="RestaurantView" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Resto/MarginContainer"]
margin_right = 495.0
margin_bottom = 688.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Label" type="Label" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Resto/MarginContainer"]
margin_right = 495.0
margin_bottom = 44.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Restaurant View"
align = 1

[node name="ReturnButton" type="Button" parent="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Resto/MarginContainer"]
unique_name_in_owner = true
visible = false
margin_left = 171.0
margin_top = 315.0
margin_right = 322.324
margin_bottom = 372.251
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Return"

[connection signal="pressed" from="Background/MarginContainer/HBoxContainer/Background2/MarginContainer/HBoxContainer/Resto/MarginContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
